<resources>
    <string name="app_name">MediQ</string>
    <string name="mediq">MediQ</string>
    <string name="login_description">ยินดีต้อนรับสู่ MediQ แอปพลิเคชันสำหรับจองคิวการรักษาภายในโรงพยาบาลลาดกระบัง กรุงเทพมหานคร</string>
    <string name="citizen_id_hint">หมายเลขบัตรประชาชน</string>
    <string name="phone_number_hint">หมายเลขโทรศัพท์</string>
    <string name="password_hint">รหัสผ่าน</string>
    <string name="if_havnt_register">หากยังไม่ได้ลงทะเบียน</string>
    <string name="register_link">สมัคร</string>
    <string name="here">ที่นี่</string>
    <string name="login">ลงชื่อเข้าใช้งาน</string>
    <string name="register_profile_header">กรุณาใส่ข้อมูลส่วนตัว</string>
    <string name="register_profile_des">\"กรุณากรอกหมายเลขบัตรประชาชน 13 หลัก และหมายเลขโทรศัพท์ที่เราใช้ติดต่อท่านได้\"</string>
    <string name="citizen_id_label">หมายเลขบัตรประชาชน</string>
    <string name="phone_number_label">หมายเลขโทรศัพท์</string>
    <string name="next">ต่อไป</string>
    <string name="register_name_header">กรุณาใส่ชื่อของคุณ</string>
    <string name="register_name_des">\"กรุณากรอกชื่อจริงและนามสกุลจริงของท่าน เพื่อใช่ในการอ้างอิงกับประวัติผู้ป่วยของท่าน\"</string>
    <string name="first_name_label">ชื่อ</string>
    <string name="last_name_label">นามสกุล</string>
    <string name="register_password_header">สร้างรหัสผ่าน</string>
    <string name="register_password_des">\"สร้างรหัสผ่านสำหรับการลงชื่อเข้าใจงาน แอปพลิเคชันโดยมีความยาว 4\-8 ตัวอักษร\"</string>
    <string name="password_label">รหัสผ่าน</string>
    <string name="show_password_label">แสดงรหัสผ่าน</string>
    <string name="confirm">ยืนยัน</string>
    <string name="previous_queue_label">จำนวนคิวก่อนหน้า</string>
    <string name="press_to_queue">กดจองคิว</string>
    <string name="wait_time_label">เวลาที่รอ(ชั่วโมง)</string>
    <string name="available_queue_label">จำนวนคิวที่จองได้</string>
    <string name="current_queue_label">คิวปัจจุบัน</string>
    <string name="error_load_previous_queue">ไม่สามารถโหลดจำนวนคิวก่อนหน้าได้</string>
    <string name="error_load_in_progress_queue">ไม่สามารถโหลดเลขที่คิวปัจจุบันได้</string>
    <string name="error_load_wait_time">ไม่สามารถโหลดเวลาที่รอได้</string>
    <string name="error_load_available_queue">ไม่สามารถโหลดจำนวนคิวที่สามารถจองได้</string>
    <string name="no_previous_queue">-</string>
    <string name="error_load_data">เกิดข้อผิดพลาด ไม่สามารถแสดงข้อมูลได้</string>
    <string name="register_success_header">การสมัครสำเร็จ</string>
    <string name="register_success_des">ท่านสามารถเข้าสู่ระบบเพื่อจองคิวได้ทันที</string>
    <string name="back_to_login_activity">กลับไปหน้าลงชื่อเข้าใช้</string>
    <string name="error_empty_phone_number">*กรุณากรอกหมายเลขโทรศัพท์เพื่อใช้ลงทะเบียน</string>
    <string name="error_empty_citizen_id">*กรุณากรอกหมายเลขบัตรประชาชนเพื่อใช้ลงทะเบียน</string>
    <string name="error_duplicate_phone_number">*หมายเลขโทรศัพท์นี้เคยใช้ในการลงทะเบียนแล้ว</string>
    <string name="error_duplicate_citizen_id">*หมายเลขบัตรประชาชนนี้เคยใช้ในการลงทะเบียนแล้ว</string>
    <string name="error_not_found_phone_number">ไม่พบหมายเลขโทรศัพท์นี้ในระบบ</string>
    <string name="error_wrong_password">รหัสผ่านไม่ถูกต้อง</string>
    <string name="error_can_not_verify_login">เกิดข้อผิดพลาดในการตรวจสอบหมายเลขโทรศัพท์ โปรดลองใหม่อีกครั้ง</string>
    <string name="user_queue_label">คิวของคุณคือ</string>
    <string name="cancel_queue">ยกเลิกคิว</string>
    <string name="wait_queue_label">จำนวนคิวที่รอ(คิว)</string>
    <string name="queue_dialog_positive">ยืนยัน</string>
    <string name="queue_dialog_negative">ยกเลิก</string>
    <string name="add_queue_dialog_title">ดำเนินการจองคิว</string>
    <string name="add_queue_dialog_message">คุณต้องการที่จะดำเนินการจองคิวใช่หรือไม่ ?</string>
    <string name="reach_queue_dialog_title">ถึงคิวของคุณแล้ว!</string>
    <string name="remove_queue_dialog_title">ยกเลิกการจองคิว</string>
    <string name="remove_queue_dialog_message">คุณต้องการที่จะยกเลิกการจองคิวของคุณหรือไม่ ?</string>
    <string name="profile_title">ข้อมูลส่วนตัว</string>
    <string name="profile_first_name">ชื่อ</string>
    <string name="profile_last_name">นามสกุล</string>
    <string name="profile_citizen_id">หมายเลขบัตรประชาชน</string>
    <string name="profile_phone_number">หมายเลขโทรศัพท์</string>
    <string name="logout">ออกจากระบบ</string>
    <string name="cancel_button">ยกเลิก</string>
    <string name="confirm_button">ยืนยัน</string>
    <string name="go_to_profile_page">go to profile page</string>
    <string name="edit_profile">edit profile</string>
</resources>
