<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueGray"
    tools:context="com.nonggun.mediq.controllers.profile.ProfileActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/profileTitleBarLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/bgGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="28dp"
            android:text="@string/profile_title"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/profileFirstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="38dp"
        android:text="@string/profile_first_name"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:labelFor="@+id/profileFirstNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTitleBarLayout" />

    <EditText
        android:id="@+id/profileFirstNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileFirstNameLabel" />

    <TextView
        android:id="@+id/profileLastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile_last_name"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:labelFor="@+id/profileLastNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileFirstNameEditText" />

    <EditText
        android:id="@+id/profileLastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLastNameLabel" />

    <TextView
        android:id="@+id/profileCitizenIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile_citizen_id"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:labelFor="@+id/profileCitizenIdEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLastNameEditText" />

    <EditText
        android:id="@+id/profileCitizenIdEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileCitizenIdLabel" />

    <TextView
        android:id="@+id/profilePhoneNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile_phone_number"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:labelFor="@+id/profilePhoneNumberEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileCitizenIdEditText" />

    <EditText
        android:id="@+id/profilePhoneNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneNumberLabel" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_red_style"
        android:padding="14dp"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneNumberEditText" />

    <Button
        android:id="@+id/editProfileCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_red_style"
        android:padding="14dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:text="@string/cancel_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneNumberEditText"
        app:layout_constraintVertical_bias="0.493" />

    <Button
        android:id="@+id/editProfileConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_green_style"
        android:padding="14dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:text="@string/confirm_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneNumberEditText" />

</android.support.constraint.ConstraintLayout>
